--- a/vignettes/ClassifySequences.Rmd
+++ b/vignettes/ClassifySequences.Rmd
@@ -3,6 +3,10 @@ title: "Classify Sequences"
 author: "Erik S. Wright"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Classify Sequences}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 
