--- a/vignettes/ClusteringSequences.Rmd
+++ b/vignettes/ClusteringSequences.Rmd
@@ -3,6 +3,10 @@ title: "Upsize your clustering with Clusterize"
 author: "Erik S. Wright"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Upsize your clustering with Clusterize}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 
