--- a/vignettes/DECIPHERing.Rmd
+++ b/vignettes/DECIPHERing.Rmd
@@ -3,6 +3,10 @@ title: "Getting Started DECIPHERing"
 author: "Erik S. Wright"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Getting Started DECIPHERing}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 
