--- a/vignettes/DesignMicroarray.Rmd
+++ b/vignettes/DesignMicroarray.Rmd
@@ -3,6 +3,10 @@ title: "Design Microarray Probes"
 author: "Erik S. Wright"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Design Microarray Probes}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 
