--- a/vignettes/DesignPrimers.Rmd
+++ b/vignettes/DesignPrimers.Rmd
@@ -3,7 +3,10 @@ title: "Design Group-Specific Primers"
 author: "Erik S. Wright"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
-
+vignette: >
+  %\VignetteIndexEntry{Design Group-Specific Primers}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 # Introduction
